--- a/project.json
+++ b/project.json
@@ -3,7 +3,9 @@
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
+    "Arutu.ColNumberToColLetter.Activity": "[1.0.2]",
     "Arutu.ReadAllExcelSheet.Activity": "[1.0.5]",
+    "Arutu.TransposeTable.Activity": "[1.0.1]",
     "UiPath.Credentials.Activities": "[2.0.0]",
     "UiPath.Excel.Activities": "[2.11.4]",
     "UiPath.Form.Activities": "[1.9.6]",
